SMAR-27366 - Stories component - Spacing issue fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/stories/_stories.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/stories/_stories.scss
@@ -85,7 +85,7 @@
     }
 
     @media #{$desktop} {
-        @include margin($margin-xxxl);
+        @include margin($margin-l $margin-xxxl $margin-zero);
         .gradient-class {
             bottom: 0;
         }
